tests/tests/neg/error_messages/invalid_reflect03.rs
#[flux::reflect]
pub enum Day {
    Sat(i32), //~ ERROR reflected enum variants cannot have any fields
    Sun,
}
